# Msu_husky_mapping

./: .gitignore  .gitmodules  LIDAR_DETECTION_GUIDE.html  LIDAR_DETECTION_GUIDE.md  README.md  os-122512000887-metadata.json  setup.ros2_venv.bash
OpenPCDet_backup/: setup.py
OpenPCDet_backup/pcdet/datasets/argo2/: argo2_dataset.py
OpenPCDet_backup/pcdet/models/backbones_3d/: __init__.py
OpenPCDet_backup/pcdet/models/detectors/: __init__.py
OpenPCDet_backup/pcdet/models/model_utils/: model_nms_utils.py
OpenPCDet_backup/pcdet/ops/: __init__.py
OpenPCDet_backup/pcdet/ops/ingroup_inds/: ingroup_inds_op.py
OpenPCDet_backup/pcdet/ops/iou3d_nms/: iou3d_nms_utils.py
OpenPCDet_backup/pcdet/ops/roiaware_pool3d/: roiaware_pool3d_utils.py
OpenPCDet_backup/pcdet/ops/roipoint_pool3d/: roipoint_pool3d_utils.py
OpenPCDet_backup/pcdet/utils/: loss_utils.py
OpenPCDet_backup/tools/: demo.py
basic_mobile_robot/: CMakeLists.txt  package.xml  setup.py
basic_mobile_robot/launch/: view_robot.launch.py
basic_mobile_robot/models/urdf/: basic_mobile_bot_v1.urdf
basic_mobile_robot/rviz/: urdf_config.rviz
lidar_mapping_launch/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
lidar_mapping_launch/config/: os_config.yaml
lidar_mapping_launch/launch/: bringup.launch.py  full_pipeline.launch.py
lidar_object_detection/: package.xml  setup.py
lidar_object_detection/config/: nuscenes_pointpillar.yaml  pointpillar.yaml
lidar_object_detection/launch/: detection.launch.py
lidar_object_detection/lidar_object_detection/: detection_node.py
(+5 files in other folders)
