<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_mapping_launch</name>
  <version>0.0.1</version>
  <description>Launch files for LIO-SAM and object detection</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>lio_sam</exec_depend>
  <exec_depend>lidar_object_detection</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
